--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
       background-color: #d1fae5;
       color: #065f46;
       border-color: #a7f3d0;
+      margin-top: 20px;
     }
     .message.error {
       background-color: #fee2e2;
