--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
     .drag-drop-area {
       border: 2px dashed #d1d5db;
       border-radius: 8px;
+      margin-bottom: 30px;
       padding: 1.5rem;
       text-align: center;
       background-color: #f9fafb;
