--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
       }
     }
 
-    // Download Sample File
+    // Download Sample File with retry logic
     async function downloadSample(containerId, section) {
       const downloadLink = document.getElementById(`${containerId}-download-sample-link`);
       if (!downloadLink) return;
@@ -849,43 +849,59 @@
       const originalText = downloadLink.textContent;
       downloadLink.textContent = 'Downloading...';
 
-      try {
-        const response = await fetch(API_ENDPOINTS[section].downloadSample, {
-          method: 'GET',
-          headers: {
-            'Authorization': `Bearer ${TOKEN}`,
-            'Content-Type': 'application/json'
+      let attempts = 0;
+      const maxAttempts = 3;
+      const delay = ms => new Promise(resolve => setTimeout(resolve, ms));
+
+      while (attempts < maxAttempts) {
+        try {
+          const response = await fetch(API_ENDPOINTS[section].downloadSample, {
+            method: 'GET',
+            headers: {
+              'Authorization': `Bearer ${TOKEN}`,
+              'Content-Type': 'application/json'
+            }
+          });
+
+          if (!response.ok) {
+            if (response.status === 503) {
+              attempts++;
+              if (attempts < maxAttempts) {
+                showMessage(containerId, `Service unavailable, retrying (${attempts}/${maxAttempts})...`, 'error');
+                await delay(2000); // Wait 2 seconds before retry
+                continue;
+              }
+              throw new Error('Service temporarily unavailable after multiple attempts');
+            }
+            const errorData = await parseResponse(response);
+            throw new Error(errorData.message || `HTTP ${response.status}: Failed to download sample`);
           }
-        });
 
-        if (!response.ok) {
-          const errorData = await parseResponse(response);
-          throw new Error(errorData.message || `HTTP ${response.status}: Failed to download sample`);
+          const blob = await response.blob();
+          if (!blob || blob.size === 0) {
+            throw new Error('Empty response from server');
+          }
+
+          const url = window.URL.createObjectURL(blob);
+          const link = document.createElement('a');
+          link.href = url;
+          link.download = `${section === 'variantOos' ? 'Variant_OOS' : section === 'variantDelays' ? 'Variant_Delays' : 'Cutoff'}.zip`;
+          document.body.appendChild(link);
+          link.click();
+          window.URL.revokeObjectURL(url);
+          document.body.removeChild(link);
+
+          showMessage(containerId, 'Sample file downloaded successfully!', 'success');
+          break;
+
+        } catch (error) {
+          console.error('Download error:', error);
+          showMessage(containerId, `Download failed: ${error.message}`, 'error');
         }
-
-        const blob = await response.blob();
-        if (!blob || blob.size === 0) {
-          throw new Error('Empty response from server');
-        }
-
-        const url = window.URL.createObjectURL(blob);
-        const link = document.createElement('a');
-        link.href = url;
-        link.download = `${section === 'variantOos' ? 'Variant_OOS' : section === 'variantDelays' ? 'Variant_Delays' : 'Cutoff'}.zip`;
-        document.body.appendChild(link);
-        link.click();
-        window.URL.revokeObjectURL(url);
-        document.body.removeChild(link);
-
-        showMessage(containerId, 'Sample file downloaded successfully!', 'success');
-
-      } catch (error) {
-        console.error('Download error:', error);
-        showMessage(containerId, `Download failed: ${error.message}`, 'error');
-      } finally {
-        downloadLink.style.pointerEvents = 'auto';
-        downloadLink.textContent = originalText;
       }
+
+      downloadLink.style.pointerEvents = 'auto';
+      downloadLink.textContent = originalText;
     }
 
     // Revert Uploads Function
