--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
     let isSidebarOpen = false;
 
     // API Configuration
-    const API_BASE_URL = 'https://apis-stage.thesleepcompany.in';
+    const API_BASE_URL = 'https://apis.thesleepcompany.in';
     const TOKEN = 'eyJhbGciOiJIUzI1NiJ9.eyJyb2xlcyI6WyJhZG1pbiJdfQ.MFelpPBRMF7r88jdJZxGK0kvvhwX0f7xdw4yNxIRhGc';
     
     const API_ENDPOINTS = {
