--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
 
     // API Configuration
     const API_BASE_URL = 'https://apis.thesleepcompany.in';
-    const TOKEN = 'eyJhbGciOiJIUzI1NiJ9.eyJyb2xlcyI6WyJhZG1pbiJdfQ.MFelpPBRMF7r88jdJZxGK0kvvhwX0f7xdw4yNxIRhGc';
+    const TOKEN = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlcyI6WyJhZG1pbiJdLCJpYXQiOjE1MTYyMzkwMjJ9.B44VDYc7gPcfJ5UUEf1tL6Qw98dzQVHGxKYcOhgZvFg';
     
     const API_ENDPOINTS = {
       holiday: {
